# autogator

./: .bumpversion.cfg  .gitignore  CHANGELOG.txt  Makefile  README.md  circuits.txt  config.ini  fabrun5.gds  fullControl.ui  gdsReader.py  keyboardGUI.ui  mkdocs.yml  pyproject.toml  requirements.txt  requirements_old.txt  setup.cfg  setup.py
.github/workflows/: release.yml
OldScripts/: VISAresourceExtentions.py  basicscan.py  circuits_test.txt  commander.py  mainwindow.py  mapExample.py  motionExample.py  optimizer.py  scan.py  testingBasicScan.py
OldScripts/compiled/: widget_motor_ui.py  window_main_ui.py
OldScripts/controllers/: startup.py
OldScripts/views/: window_main.py
OldScripts/vision/: __init__.py
assembly/: Microscope mount v2.stl  array_clamp_6deg.STL  array_holder_6deg.STL  chip_platform.STL  circle_adapter.STL  goniometer_adapter.STL  ninety_degree_adapter.STL  vaccum_chip_small.STL
autogator/: __init__.py  __main__.py  analysis.py  api.py  autoGUI.py  autogui.py  automation.py  camera.py  circuit.py  circuitMap.py  circuitmap.py  circuits.py  config.py  configurations.py  controllers.py  dataCache.py  dataScanner.py  data_cache.py  datacache.py  datascanner.py  errors.py  experiment.py  experiments.py  fake_experiment.py  global_objects.py  globals.py  hardware.py  interfaces.py  map.py  motion.py  multiThreadingTesting.py  piezo.py  platformCalibrator.py  platformcalibrator.py  profiles.py  registry.py  routines.py  stage.py  stubs.py  test.py  (+5 more)
autogator/GDSReader/: circuits.txt  gdsReader.py  parser.py  (+2 more)
docs/: Thorlabs.MotionControl.C_API.chm  changelog.md  configopt.md  credits.md  index.md  license.md  requirements.txt
examples/: basic_scan.py  basicscan.py  calibrate.py  calibration.py  circuitmaps.py  circuits_test.txt  concentric_calibrate.py  concentric_rotation_example.py  configuration.py  control.py  date_time_chipname_locx_{x}_locy_{y}.wlsweep  experiment.py  experiments.py  filtering_example.py  gds_reader_example.py  mapExample.py  map_example.py  motionExample.py  motion_example.py  optimize.py  plotit.py  positioner.py  scripting.py  search_example.py  smooth_rotation_example.py  sweep_example.py  test_example.py  testingBasicScan.py  testing_basic_scan.py  workingExample.py  working_example.py
reevaluate/: autogui.py
scripts/: exampleapp.py  keycommand.py
tests/: testFramework.py  test_circuitmap.py
thorlabs_apt/: APT.lib  _APTAPI.py  core.py
tools/: gdsreader.py  ui2py.py
(+224 files in other folders)
