[metadata]
name = AutoGator
version = 0.3.0
description = A software package for camera-assisted motion control of PIC chip interrogation platforms.
long_description = file: README.md
long_description_content_type = text/markdown
author = Sequoia Ploeg
author_email = sequoia.ploeg@byu.edu
url = https://github.com/BYUCamachoLab/autogator
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
license = MIT
keywords = PyroLab, Pyro5, Pyro, lab, instrument, remote, resources, framework, laboratory, instrumentation, hardware, science, remote, network, integration, PIC, photonic integrated circuit
platforms = Windows, Linux, Mac OS-X
project_urls = 
    Source = https://github.com/BYUCamachoLab/autogator
    Tracker = https://github.com/BYUCamachoLab/autogator/issues
    Research Group = https://camacholab.byu.edu/

[options]
python_requires = >=3.7
packages = find:
setup_requires = 
    pip >= 21.1
install_requires = 
    numpy
    scipy
    matplotlib
    appdirs
    keyboard
    pydantic
    pyrolab
    
# [options.entry_points]
# console_scripts =
#     autogator = autogator.cli:app

[options.extras_require]
visa =
    pyvisa
